# master-worker-C-Fortran-Python

./: README.md
C/master_worker/ready_frame/: a.out
Python_Mult/l1/: .launcher.py.swp  launcher.py
Python_Mult/l1/run_1/: stdout.txt
Python_Mult/l1/run_10/: stdout.txt
Python_Mult/l1/run_100/: stdout.txt
Python_Mult/l1/run_101/: stdout.txt
Python_Mult/l1/run_102/: stdout.txt
Python_Mult/l1/run_103/: stdout.txt
Python_Mult/l1/run_104/: stdout.txt
Python_Mult/l1/run_105/: stdout.txt
Python_Mult/l1/run_106/: stdout.txt
Python_Mult/l1/run_107/: stdout.txt
Python_Mult/l1/run_108/: stdout.txt
Python_Mult/l1/run_109/: stdout.txt
Python_Mult/l1/run_11/: stdout.txt
Python_Mult/l1/run_110/: stdout.txt
Python_Mult/l1/run_111/: stdout.txt
Python_Mult/l1/run_112/: stdout.txt
Python_Mult/l1/run_113/: stdout.txt
Python_Mult/l1/run_114/: stdout.txt
Python_Mult/l2/: launcher.py  log.txt
Python_Mult/mp0/: node.py  resource_check.py  run_mpi_program.py  single_core.py  sys_call.sh
Python_Mult/mp1/: apply.py  apply_async.py
Python_Mult/mp2/: program.py  stopWord.txt
Python_Mult/multiNode_1/: PythonMP_test.e1019284  PythonMP_test.o1019284  PythonMP_test.po1019284  js.sh  res.txt
Python_Mult/multiNode_2/: PythonMP_test.e1019291  PythonMP_test.po1019291  js.sh  program.py
Python_Mult/sge_multiNodeTest/: program.py
mpi/C/master_worker/multiprocess_worker_pureC/: CMakeLists.txt  main.c  master_worker_task.c
mpi/C/master_worker/multiprocess_worker_pureC/subprogram/binding/simple_binding_1/: .call_fortran_main.c.swp  .fsubroutine_pi.f90.swp  a.out  call_fortran_main.c  fsubroutine_pi.f90
mpi/C/master_worker/multiprocess_worker_pureC/subprogram/binding/simple_binding_2/: a.out
mpi/C/master_worker/multiprocess_worker_pureC/subprogram/itself/: a.out
test_programs_bin/: pi.x  pi_1.c  pi_2.c  pi_3.c  pi_4.c  stdout
(+355 files in other folders)
